[package]
name = "rusty_http_client"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A lightweight Rust SDK that wraps around reqwest to simplify making HTTP requests"
license = "MIT"
repository = "https://github.com/yourusername/rusty_http_client"
keywords = ["http", "client", "reqwest", "wrapper", "api"]
categories = ["api-bindings", "web-programming::http-client"]
readme = "README.md"

[dependencies]
reqwest = { version = "0.11", features = ["json", "cookies", "blocking", "multipart"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1.0", features = ["full"] }
url = "2.3"
urlencoding = "2.1"
async-trait = "0.1"
log = "0.4"

[dev-dependencies]
tokio-test = "0.4"
env_logger = "0.10"

[features]
default = ["async"]
async = []
blocking = []
middleware = []
full = ["async", "blocking", "middleware"]

[[example]]
name = "basic_usage"
path = "examples/basic_usage.rs"

[[example]]
name = "middleware_example"
path = "examples/middleware_example.rs"

[[example]]
name = "blocking_example"
path = "examples/blocking_example.rs"
required-features = ["blocking"]

[[example]]
name = "advanced_usage"
path = "examples/advanced_usage.rs"